udpated all culture scores to have conditional color coding

--- a/brooks.html
+++ b/brooks.html
@@ -21,7 +21,10 @@
         <li id='population'></li>
         <li id='climate'></li>
         <li id='language'></li>
-        <li id='culture'></li>
+    </ul>
+
+    <h3>Culture Scores</h3>
+    <ul id='city-culture'>
         <li id='art-galleries'></li>
         <li id='cinema'></li>
         <li id='comedy'></li>
@@ -31,11 +34,11 @@
         <li id='performance'></li>
         <li id='sports'></li>
         <li id='zoos'></li>
-        
-
-
-        <li id='city-bio'><a id='city-bio-link' href='#' target='_blank'>More Details</a></li>
+        <li id='culture'></li>
     </ul>
+        
+    <p id='city-bio'></p><a id='city-bio-link' href='#' target='_blank'>More Details</a>
+    </p>
 
     <!-- <script src="covid.js"></script> -->
     <script src="city-stats.js"></script>
