--- a/brooks.html
+++ b/brooks.html
@@ -25,15 +25,15 @@
 
     <h3>Culture Scores</h3>
     <ul id='city-culture'>
-        <li id='art-galleries'></li>
-        <li id='cinema'></li>
-        <li id='comedy'></li>
-        <li id='concerts'></li>
-        <li id='history'></li>
-        <li id='museums'></li>
-        <li id='performance'></li>
-        <li id='sports'></li>
-        <li id='zoos'></li>
+        <li>Art galleries: <span id='art-galleries'></span></li>
+        <li>Cinema venues: <span id='cinema'></span></li>
+        <li>Comedy clubs: <span id='comedy'></span></li>
+        <li>Concert venues: <span id='concerts'></span></li>
+        <li>Historical sites: <span id='history'></span></li>
+        <li>Museums: <span id='museums'></span></li>
+        <li>Performing arts: <span id='performance'></span></li>
+        <li>Sports venues: <span id='sports'></span></li>
+        <li>Zoos: <span id='zoos'></span></li>
         <li id='culture'></li>
     </ul>
         
@@ -41,6 +41,6 @@
     </p>
 
     <!-- <script src="covid.js"></script> -->
-    <script src="city-stats.js"></script>
+    <script src="./js/city-stats.js"></script>
 </body>
 </html>
