--- a/zkindex.html
+++ b/zkindex.html
@@ -11,7 +11,7 @@
     ></script>
     
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -36,6 +36,6 @@
 
 
     
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
