--- a/zkindex.html
+++ b/zkindex.html
@@ -30,10 +30,7 @@
         <tbody id="dataTable" class="justify-center mx-auto text-center"></tbody>
       </table>
     
-      <div class="covidData">
-        <iframe src="https://public.domo.com/cards/axpDJ" width="100%" height="600" marginheight="0" marginwidth="0" frameborder="0"></iframe>
-      </div>
-
+      <iframe style="width: 800px; height: 645px" src="https://covid19.biglocalnews.org/county-maps/index.html?embed=usa&v=cases#/" frameborder="0" scrolling="no" ></iframe>
 
     
     <script type="text/javascript" src="./js/script.js"></script>
