updated input field to match

--- a/brooks.html
+++ b/brooks.html
@@ -40,6 +40,8 @@
     <p id='city-bio'></p><a id='city-bio-link' href='#' target='_blank'>More Details</a>
     </p>
 
+    <button id='add-to-favorites'>Favorite</button>
+
     <!-- <script src="covid.js"></script> -->
     <script src="./js/city-stats.js"></script>
 </body>
