--- a/index.html
+++ b/index.html
@@ -37,14 +37,10 @@
     <div class="container">
         <div class="row">
             <div class="input-field col s4">
-                <form id="input-form">
-                    <input id="input-field" type="text" required>
-                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                    <button id="input-button">
-                        Search
-                    </button>
-                    <i class="material-icons">close</i>
-                </form>
+                <input type="text" id="searchField" name="search" placeholder="Search...">
+    <button class="btn-success" id="get-button">
+        Search
+      </button>
             </div>
                 <!-- Favorites -->
             <div class="col s8 l8">
