added zach's html for the attractions card

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col s6">
                 <div class="card large">
                     <div class="card-content black-text"> 
-                        <!--BROOKS ADDED CODE TO THIS SECTION  -->
+                        <!--BROOKS CARD -->
                         <span class="card-title">City Stats</span>
                         <ul id='city-details'>
                             <li><strong><u>GENERAL INFO</u></strong></li>
@@ -129,22 +129,14 @@
             </div>
             <div class="col s6">
                 <div class="card large">
-                    <div class="card-content black-text">
+                    <div class="card-content black-text" id="scroll">
                         <span class="card-title">Attractions</span>
-                        <ul>
-                            <li><img src="https://placeimg.com/75/75/arch">
-                                <p>Zombie ipsum reversus ab viral inferno</p>
-                            </li>
-                            <li><img src="https://placeimg.com/75/75/arch">
-                                <p>Zombie ipsum reversus ab viral inferno</p>
-                            </li>
-                            <li><img src="https://placeimg.com/75/75/arch">
-                                <p>Zombie ipsum reversus ab viral inferno</p>
-                            </li>
-                            <li><img src="https://placeimg.com/75/75/arch">
-                                <p>Zombie ipsum reversus ab viral inferno</p>
-                            </li>
-                        </ul>
+                        <table class=" justify-center align-items-center" id="results">
+                            <th>
+                              <p class="my-4"></p>
+                            </th>
+                            <tbody id="dataTable" class="justify-center mx-auto text-center"></tbody>
+                        </table>
                     </div>
                 </div>
             </div>
