--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
                 <a href="#" class="brand-logo left"><i class="material-icons">beach_access</i></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <div class="input-field">
-                      <input id="search" type="search" required>
-                      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                      <i class="material-icons">close</i>
-                    </div>
+                        <div class="input-field">
+                            <input id="search" type="search" required>
+                            <!-- I added an ID to the search icon -->
+                            <label class="label-icon" for="search"><i id="search-button" class="material-icons">search</i></label>
+                            <i class="material-icons">close</i>
+                          </div>
 
                 <ul class="right">
                 <ul class="right">
@@ -150,9 +151,7 @@
                 <div class="card">
                     <div class="card-content black-text">
                         <span class="card-title">Covid Information</span>
-                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                            animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
-                            omero undead survivor dictum.</p>
+                        <iframe style="width: 100%; height: 300px" src="https://covid19.biglocalnews.org/county-maps/index.html?embed=usa&v=cases#/" frameborder="0" scrolling="yes" ></iframe>
                     </div>
                 </div>
             </div>
@@ -171,8 +170,8 @@
 <!-- <script src="js/jquery.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/materialize.js"></script>
-<!-- <script src="js/city-stats.js"></script> -->
-<!-- <script src="js/script.js"></script> -->
+<script src="js/city-stats.js"></script>
+<script src="js/script.js"></script>
 <script src="js/init.js"></script>
 
 </html>
