fixed search field behavior and fixed javascript functions

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <!-- Search Box -->
     <nav>
         <div class="nav-wrapper">
-          <form>
+          <form id="search-form">
             <div class="input-field">
               <input id="search" type="search" required>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <label class="label-icon" for="search"><i id="search-button" class="material-icons">search</i></label>
               <i class="material-icons">close</i>
             </div>
           </form>
@@ -150,8 +150,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
 <script src="js/city-stats.js"></script>
 <script src="js/script.js"></script>
-<script src="js/init.js"></script>
 
 </html>
