added function to hook add favorite button to local storage

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
           </form>
         </div>
       </nav>
-    <!-- Dropdown Structure of Favorites Menu -->
+      <button id="fav-button">
+        Add Favorite
+        </button>
+
+      <!-- Dropdown Structure of Favorites Menu -->
     <ul id='dropdown1' class='dropdown-content'>
-        <li><a href="#!">one</a></li>
-        <li><a href="#!">two</a></li>
-        <li><a href="#!">three</a></li>
-        <li><a href="#!">four</a></li>
-        <li><a href="#!">five</a></li>
     </ul>
 
     <!-- Modal Overlay upon Load -->
