added 'add favorites' button and toast

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <a href="#" class="brand-logo left"><i class="material-icons">beach_access</i></a>
             <ul class="right">
                 <li>
+                    <a onclick="M.toast({html: 'Added destination!'})" class='btn'>Add Favorites</a>
+                </li>
+                <li>
                     <!-- Dropdown Trigger for Favorites Button -->
                     <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Favorites</a>
                 </li>
