added id to new favorites button and hooked it up to function. removed redundant language from city stats card.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo left"><i class="material-icons">beach_access</i></a>
             <ul class="right">
-                <li>
+                <li id='fav-button'>
                     <a onclick="M.toast({html: 'Added destination!'})" class='btn'>Add Favorites</a>
                 </li>
                 <li>
