--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col s12 m6">
                 <div class="card large">
                     <div class="card-content black-text" id="scroll">
-                        <span class="card-title">Attractions</span>
+                        <span class="card-title">Events</span>
                         <table class=" justify-center align-items-center" id="results">
                             <th>
                                 <p class="my-4"></p>
