--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 
     <!-- Covid Info Box -->
     <div>
-        <div class="row">
-            <div class="col s12">
-                <div class="card">
-                    <div class="card-content black-text">
+        <div class="row covid">
+            <div class="col s12 covid">
+                <div class="card covid">
+                    <div class="card-content black-text covid">
                         <span class="card-title">Covid Information</span>
-                        <iframe style="width: 100%; height: 300px"
+                        <iframe style="width: 100%; height: 700px"
                             src="https://covid19.biglocalnews.org/county-maps/index.html?embed=usa&v=cases#/"
                             frameborder="0" scrolling="yes"></iframe>
                     </div>
