added styling to city stats content

--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                         <!--BROOKS CARD -->
                         <span class="card-title">City Stats</span>
                         <ul id='city-details'>
-                            <li><strong><u>GENERAL INFO</u></strong></li>
-                            <li>Location: <span id='city-name'></span></li>
-                            <li>Population: <span id='population'></span></li>
-                            <li>Climate: <span id='climate'></span></li>
-                            <li>Language: <span id='language'></span></li>
-                            <li><u>CULTURE SCORES</u> </li>
-                            <li>Art galleries: <span id='art-galleries'></span></li>
-                            <li>Cinema venues: <span id='cinema'></span></li>
-                            <li>Comedy clubs: <span id='comedy'></span></li>
-                            <li>Concert venues: <span id='concerts'></span></li>
-                            <li>Historical sites: <span id='history'></span></li>
-                            <li>Museums: <span id='museums'></span></li>
-                            <li>Performing arts: <span id='performance'></span></li>
-                            <li>Sports venues: <span id='sports'></span></li>
-                            <li>Zoos: <span id='zoos'></span></li>
-                            <li><span id='culture'></li>
+                            <li><b><u>GENERAL INFO</u></b></li>
+                            <li>Location -------------: <span id='city-name'></span></li>
+                            <li>Population ----------: <span id='population'></span></li>
+                            <li>Climate --------------: <span id='climate'></span></li>
+                            <li>Language -----------: <span id='language'></span></li>
+                            <li><b><u>CULTURE SCORES</u></b> </li>
+                            <li>Art galleries --------: <span id='art-galleries'></span></li>
+                            <li>Cinema venues ----: <span id='cinema'></span></li>
+                            <li>Comedy clubs ------: <span id='comedy'></span></li>
+                            <li>Concert venues -----: <span id='concerts'></span></li>
+                            <li>Historical sites ------: <span id='history'></span></li>
+                            <li>Museums -------------: <span id='museums'></span></li>
+                            <li>Performing arts ----: <span id='performance'></span></li>
+                            <li>Sports venues -------: <span id='sports'></span></li>
+                            <li>Zoos -------------------: <span id='zoos'></span></li>
+                            <li>Overall score--------: <span id='culture'></li>
                             <li><a id='city-bio-link' href='#' target='_blank'>More Details</a></li>
                         </ul>
                     </div>
